--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>HelloWorld</members>
+        <members>AccountUtils</members>
+        <members>AccountUtilsTest</members>
+        <members>HelloWorldTest</members>
+        <members>MathUtils</members>
+        <members>MathUtilsTest</members>
+        <members>StringUtils</members>
+        <members>StringUtilsTest</members>
         <name>ApexClass</name>
     </types>
     <version>58.0</version>
