--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>TestLightningAuraDefinationBundle.auradoc</members>
-        <members>TestLightningAuraDefinationBundle.cmp</members>
-        <members>TestLightningAuraDefinationBundle.css</members>
-        <members>TestLightningAuraDefinationBundle.design</members>
-        <members>TestLightningAuraDefinationBundle.svg</members>
-        <members>TestLightningAuraDefinationBundleController.js</members>
-        <members>TestLightningAuraDefinationBundleHelper.js</members>
-        <members>TestLightningAuraDefinationBundleRenderer.js</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle..auradoc</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle..cmp</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle..css</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle..design</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle..svg</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle.Controller.js</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle.Helper.js</members>
+        <members>TestLightningAuraDefinationBundle/TestLightningAuraDefinationBundle.Renderer.js</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <version>58.0</version>
