--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Flow</members>
-        <name>Flow</name>
+        <members>Purchase__c</members>
+        <members>Sale__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Purchases_Report</members>
+        <members>Sales_Report</members>
+        <name>ReportType</name>
     </types>
     <version>58.0</version>
 </Package>
