--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Flow</members>
-        <name>Flow</name>
+        <members>Account.Picklist_2__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>My_Global_Picklist_2</members>
+        <name>GlobalValueSet</name>
     </types>
     <version>58.0</version>
 </Package>
