--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Flow</members>
-        <name>Flow</name>
+        <members>Purchase_Order__c.Account__c</members>
+        <members>Purchase_Order__c.Signed__c</members>
+        <name>CustomField</name>
     </types>
-    <version>58.0</version>
+    <types>
+        <members>Purchase_Order__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>PO_Report</members>
+        <name>ReportType</name>
+    </types>
+    <version>59.0</version>
 </Package>
