--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Flow</members>
-        <name>Flow</name>
+        <members>LeadSource</members>
+        <members>LeadSource</members>
+        <members>LeadSource</members>
+        <members>LeadSource</members>
+        <members>LeadSource</members>
+        <name>StandardValueSet</name>
     </types>
-    <version>58.0</version>
+    <version>59.0</version>
 </Package>
