--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>Calculator</members>
+        <members>CalculatorTest</members>
         <name>ApexClass</name>
     </types>
     <version>59.0</version>
