--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>MyEmails</members>
+        <members>MyEmails/MyEmailFolder</members>
         <name>EmailTemplate</name>
     </types>
     <version>59.0</version>
