--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MyEmails</members>
-        <name>EmailTemplate</name>
+        <members>My_Flow</members>
+        <name>Flow</name>
     </types>
     <version>59.0</version>
 </Package>
