--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Lable_2</members>
-        <name>CustomLabel</name>
+        <members>AccountOperationsDOWNTIME</members>
+        <members>AccountOperationsDOWNTIMETest</members>
+        <name>ApexClass</name>
     </types>
     <types>
-        <members>fr</members>
-        <name>Translations</name>
+        <members>saq_test</members>
+        <name>ApexComponent</name>
+    </types>
+    <types>
+        <members>X5770</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>AccountDefaultDescriptionDOWNTIME</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>EI</members>
+        <name>AuraDefinitionBundle</name>
+    </types>
+    <types>
+        <members>Asset.COMMITCHANGES__c</members>
+        <members>Asset.ContactId</members>
+        <members>Asset.CurrentAmount</members>
+        <members>Asset.CurrentMrr</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Case</members>
+        <members>ChatterActivity</members>
+        <members>CommSubscription</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Account_Record_Page</members>
+        <members>X53_UtilityBar</members>
+        <members>v53</members>
+        <name>FlexiPage</name>
+    </types>
+    <types>
+        <members>RollbackFlow</members>
+        <members>US0020498</members>
+        <members>X53</members>
+        <members>destructive_flow</members>
+        <name>Flow</name>
+    </types>
+    <types>
+        <members>RollbackGroup</members>
+        <members>destructive_group</members>
+        <name>Group</name>
+    </types>
+    <types>
+        <members>accountList</members>
+        <members>contactList</members>
+        <members>demoLwc</members>
+        <members>manavTestLwc</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>EIPERMSET</members>
+        <members>fix</members>
+        <name>PermissionSet</name>
+    </types>
+    <types>
+        <members>ei Profile</members>
+        <members>saquib2 Profile</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>CGP_Sanity_profilePasswordPolicy1634733166845</members>
+        <members>profilePasswordPolicy1695023965327</members>
+        <name>ProfilePasswordPolicy</name>
+    </types>
+    <types>
+        <members>null_profileSessionSetting1625484493004</members>
+        <members>null_profileSessionSetting1625484503717</members>
+        <members>null_profileSessionSetting1634733166885</members>
+        <name>ProfileSessionSetting</name>
+    </types>
+    <types>
+        <members>ApexDevNet</members>
+        <name>RemoteSiteSetting</name>
+    </types>
+    <types>
+        <members>Lead.RollbackSharingRule</members>
+        <members>sharing__c.sharingCYC</members>
+        <name>SharingCriteriaRule</name>
+    </types>
+    <types>
+        <members>Account.AcocuntOwnerBasedRule</members>
+        <members>Account.destructive_sharingRule</members>
+        <members>sharing__c.sharingROYC</members>
+        <name>SharingOwnerRule</name>
+    </types>
+    <types>
+        <members>Campaign</members>
+        <members>Case</members>
+        <name>SharingRules</name>
+    </types>
+    <types>
+        <members>Asset</members>
+        <members>Case</members>
+        <name>Workflow</name>
+    </types>
+    <types>
+        <members>UserInterface</members>
+        <members>WebToX</members>
+        <members>WorkDotCom</members>
+        <name>Settings</name>
     </types>
     <version>59.0</version>
 </Package>
