--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MyEmails</members>
-        <name>EmailTemplate</name>
+        <members>kompalDec21__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>kompalDec21__c-en_US</members>
+        <members>kompalDec21__c-es</members>
+        <name>CustomObjectTranslation</name>
     </types>
     <version>59.0</version>
 </Package>
