--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MyEmptyFolder</members>
-        <name>EmailTemplate</name>
-    </types>
-    <types>
-        <members>MyNonEmptyFolder</members>
+        <members>MyNonEmptyFolder/My_Template_1703166758674</members>
         <name>EmailTemplate</name>
     </types>
     <version>59.0</version>
