--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MyNonEmptyFolder/My_Template_1703166758674</members>
-        <name>EmailTemplate</name>
+        <members>CustomerOnboardingKPIReports</members>
+        <members>CustomerOnboardingKPIReports/Customer_Onboarding_Report</members>
+        <name>Report</name>
+    </types>
+    <types>
+        <members>/CustomerOnboardingKPIReports</members>
+        <members>CustomerOnboardingKPIReports</members>
+        <name>Report</name>
     </types>
     <version>59.0</version>
 </Package>
