--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>CustomerOnboardingKPIReports</members>
+        <members>CustomerOnboardingKPIReports/Customer_Onboarding_Report</members>
         <name>Report</name>
     </types>
     <version>59.0</version>
