--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ParentFolder</members>
+        <members>ParentFolder/ChildFolder</members>
+        <members>ParentFolder/ChildFolder/My_Account_Report_DSR</members>
         <name>Report</name>
     </types>
     <version>59.0</version>
