--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ParentFolder/ChildFolder/ChildLevel1</members>
-        <members>ParentFolder/ChildFolder/ChildLevel1/New_Accounts_Report_XxU</members>
-        <name>Report</name>
+        <members>Contact.Priority__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Admin</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>PersonAccount.PersonAccount</members>
+        <name>RecordType</name>
     </types>
     <version>59.0</version>
 </Package>
