--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountBrand</members>
+        <members>Account</members>
         <name>CustomObject</name>
     </types>
     <version>59.0</version>
