--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account</members>
-        <name>CustomObject</name>
+        <members>PersonAccount.PersonAccount</members>
+        <name>RecordType</name>
     </types>
     <version>59.0</version>
 </Package>
