--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Purchase__c-fr</members>
+        <members>Purchase__c.Approved_By__c</members>
+        <members>Purchase__c.Date__c</members>
+        <members>Purchase__c.Signed_By__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Purchase__c-es</members>
         <name>CustomObjectTranslation</name>
     </types>
     <version>59.0</version>
