US-0036216: Vijay US: Translation

--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ParentFolder/ChildFolder/ChildLevel1</members>
-        <members>ParentFolder/ChildFolder/ChildLevel1/New_Accounts_Report_XxU</members>
-        <name>Report</name>
+        <members>Purchase__c.Approved_By__c</members>
+        <members>Purchase__c.Date__c</members>
+        <members>Purchase__c.Signed_By__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Purchase__c</members>
+        <name>CustomObject</name>
     </types>
     <version>59.0</version>
 </Package>
