--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>LightningEmpty</members>
-        <name>EmailTemplate</name>
-    </types>
-    <types>
-        <members>Classic_Empty</members>
-        <name>EmailTemplate</name>
+        <members>myFirstLigtning</members>
+        <members>mySecondLightning</members>
+        <name>LightningComponentBundle</name>
     </types>
     <version>59.0</version>
 </Package>
