--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>myFirstLigtning</members>
-        <members>mySecondLightning</members>
+        <members>myThirdLightning</members>
         <name>LightningComponentBundle</name>
     </types>
     <version>59.0</version>
