--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>myFourthLightning</members>
-        <name>LightningComponentBundle</name>
+        <members>Test_Classic_Empty</members>
+        <name>EmailTemplate</name>
+    </types>
+    <types>
+        <members>TestLightningEmptyEmail</members>
+        <name>EmailTemplate</name>
     </types>
     <version>60.0</version>
 </Package>
