--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Test_Classic_Empty</members>
-        <name>EmailTemplate</name>
-    </types>
-    <types>
-        <members>TestLightningEmptyEmail</members>
-        <name>EmailTemplate</name>
+        <members>myFirstLwc</members>
+        <members>mySecondLwc</members>
+        <name>LightningComponentBundle</name>
     </types>
     <version>60.0</version>
 </Package>
