--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Test_Classic_Empty</members>
-        <name>EmailTemplate</name>
+        <members>Contact.ContactPickList_2__c</members>
+        <name>CustomField</name>
     </types>
     <types>
-        <members>TestLightningEmptyEmail</members>
-        <name>EmailTemplate</name>
+        <members>PersonAccount.PersonAccount</members>
+        <name>RecordType</name>
     </types>
     <version>60.0</version>
 </Package>
