--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Test_Classic_Empty</members>
-        <name>EmailTemplate</name>
+        <members>Extrn_Credential_Test_1</members>
+        <name>ExternalCredential</name>
     </types>
     <types>
-        <members>TestLightningEmptyEmail</members>
-        <name>EmailTemplate</name>
+        <members>Extrn_Credential_Test_Pemission_Set</members>
+        <name>PermissionSet</name>
     </types>
     <version>60.0</version>
 </Package>
