US-0036284: Vijay US: Flow translations

--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Report_Permission</members>
-        <members>Sales_Permissions</members>
-        <name>PermissionSet</name>
+        <members>My_Flow</members>
+        <name>Flow</name>
     </types>
     <types>
-        <members>Copdo_Permissions_Set_Group</members>
-        <name>PermissionSetGroup</name>
+        <members>es</members>
+        <name>Translations</name>
     </types>
     <version>60.0</version>
 </Package>
