--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Flow_2</members>
-        <name>Flow</name>
+        <members>MyReports</members>
+        <members>MyReports/Leads_Report_1_Zhf</members>
+        <members>MyReports/Leads_Report_2_cuQ</members>
+        <name>Report</name>
     </types>
-    <types>
-        <members>zh_TW</members>
-        <name>Translations</name>
-    </types>
-    <version>60.0</version>
+    <version>61.0</version>
 </Package>
