--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>My_Flow_2</members>
-        <name>Flow</name>
+        <members>Root1</members>
+        <members>Root1/Root1Level1</members>
+        <members>Root1/Root1Level1/Root1Level1Template1_1720430227584</members>
+        <members>Root1/Root1Level1/Root1Level1Template2_1720430244379</members>
+        <name>EmailTemplate</name>
     </types>
     <types>
-        <members>zh_TW</members>
-        <name>Translations</name>
+        <members>Root2</members>
+        <name>EmailTemplate</name>
     </types>
-    <version>60.0</version>
+    <version>61.0</version>
 </Package>
