--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>City</members>
-        <members>Salutation</members>
-        <name>CustomLabel</name>
-    </types>
-    <types>
-        <members>it</members>
-        <name>Translations</name>
+        <members>AccountOperations</members>
+        <members>BOT_ApexClass1</members>
+        <members>BOT_ApexClass2</members>
+        <name>ApexClass</name>
     </types>
     <version>61.0</version>
 </Package>
