--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>City</members>
-        <members>Salutation</members>
-        <name>CustomLabel</name>
-    </types>
-    <types>
-        <members>it</members>
-        <name>Translations</name>
+        <members>BOT_ApexClass1Test</members>
+        <members>BOT_ApexClass2Test</members>
+        <name>ApexClass</name>
     </types>
     <version>61.0</version>
 </Package>
