--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>City</members>
-        <members>Salutation</members>
-        <name>CustomLabel</name>
+        <members>User.Activated_Deactivated_By__c</members>
+        <members>User.Activation_Deactivation_Date__c</members>
+        <name>CustomField</name>
     </types>
     <types>
-        <members>it</members>
-        <name>Translations</name>
+        <members>Admin</members>
+        <members>vp</members>
+        <name>Profile</name>
     </types>
     <version>61.0</version>
 </Package>
