--- a/package.xml
+++ b/package.xml
@@ -2,8 +2,11 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>City</members>
-        <members>Salutation</members>
         <name>CustomLabel</name>
+    </types>
+    <types>
+        <members>Account-es</members>
+        <name>CustomObjectTranslation</name>
     </types>
     <types>
         <members>it</members>
