--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>City</members>
-        <members>Salutation</members>
-        <name>CustomLabel</name>
+        <members>Purchase_Order__c-PO Page Layout</members>
+        <members>SBQQ__BlockPrice__c-BlockPrice Page Layout</members>
+        <name>Layout</name>
     </types>
     <types>
-        <members>it</members>
-        <name>Translations</name>
+        <members>Chatter Profile</members>
+        <name>Profile</name>
     </types>
-    <version>61.0</version>
+    <version>62.0</version>
 </Package>
