--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>City</members>
-        <members>Salutation</members>
-        <name>CustomLabel</name>
+        <members>Billing_Management__mdt.Site_URL__c</members>
+        <name>CustomField</name>
     </types>
     <types>
-        <members>it</members>
-        <name>Translations</name>
+        <members>Billing_Management.Website_URL</members>
+        <name>CustomMetadata</name>
     </types>
-    <version>61.0</version>
+    <types>
+        <members>Billing_Management__mdt</members>
+        <name>CustomObject</name>
+    </types>
+    <version>62.0</version>
 </Package>
