--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>City</members>
-        <members>Salutation</members>
-        <name>CustomLabel</name>
+        <members>CMT_3__mdt</members>
+        <members>CMT_4__mdt</members>
+        <members>CMT_5__mdt</members>
+        <name>CustomObject</name>
     </types>
-    <types>
-        <members>it</members>
-        <name>Translations</name>
-    </types>
-    <version>61.0</version>
+    <version>62.0</version>
 </Package>
