--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,10 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>DuplicateName</members>
+        <name>PermissionSet</name>
+    </types>
+    <types>
+        <members>DuplicateName</members>
         <name>Profile</name>
     </types>
     <version>62.0</version>
