--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>DuplicateName</members>
-        <name>Profile</name>
+        <name>PermissionSet</name>
     </types>
     <version>62.0</version>
 </Package>
