--- a/package.xml
+++ b/package.xml
@@ -4,5 +4,9 @@
         <members>DuplicateName</members>
         <name>PermissionSet</name>
     </types>
+    <types>
+        <members>DuplicateName</members>
+        <name>Profile</name>
+    </types>
     <version>62.0</version>
 </Package>
