--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>PS_With_Profile</members>
-        <name>PermissionSet</name>
+        <members>SBQQ__TaxExemptionCertificate__c.SBQQ__StreetAddress_2__c</members>
+        <name>CustomField</name>
     </types>
     <version>62.0</version>
 </Package>
