US-0036965: Vijay US: Single Commit

--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>PS_With_Profile</members>
+        <members>DuplicateName</members>
         <name>PermissionSet</name>
+    </types>
+    <types>
+        <members>DuplicateName</members>
+        <name>Profile</name>
     </types>
     <version>62.0</version>
 </Package>
