--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>SameName</members>
-        <name>Profile</name>
+        <members>site/Vijay_Digital1.sfdc_cms__languageSettings/languages</members>
+        <members>site/Vijay_Digital1.sfdc_cms__mobilePublisherConfig/mobilePublisherConfig</members>
+        <members>site/Vijay_Digital1.sfdc_cms__view/home</members>
+        <name>DigitalExperience</name>
     </types>
     <version>62.0</version>
 </Package>
