--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.MaintainedBy__c</members>
-        <members>Account.OpenedOn__c</members>
-        <name>CustomField</name>
+        <members>site/Vijay_Digital1.sfdc_cms__brandingSet/microsite_template_marketing_branding</members>
+        <name>DigitalExperience</name>
     </types>
     <version>62.0</version>
 </Package>
