--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountAutomations</members>
-        <members>AccountAutomationsTest</members>
-        <name>ApexClass</name>
+        <members>DuplicateName</members>
+        <name>PermissionSet</name>
     </types>
     <version>63.0</version>
 </Package>
