--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>Admin_Permission_Set</members>
+        <members>DuplicateName</members>
         <name>PermissionSet</name>
     </types>
     <version>63.0</version>
