--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>setStartUrl</members>
+        <members>setExpId</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <version>63.0</version>
