--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Calc</members>
-        <members>CalcTest</members>
-        <name>ApexClass</name>
+        <members>WorkOrder-WorkOrder-Work Order Layout</members>
+        <members>WorkOrder-WorkOrder-Work Order Layout 1</members>
+        <name>Layout</name>
     </types>
     <version>63.0</version>
 </Package>
