US-0037066: Vijay US: Common prefix PS

--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Custom_Settings_1__c.Field_1__c</members>
-        <name>CustomField</name>
-    </types>
-    <types>
-        <members>Custom_Settings_1__c</members>
-        <name>CustomObject</name>
+        <members>CommonPrefix</members>
+        <members>CommonPrefix_1</members>
+        <members>CommonPrefix_2</members>
+        <name>PermissionSet</name>
     </types>
     <version>63.0</version>
 </Package>
