US-0043431: Vijay: custom metadata

--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>CommonPrefix</members>
-        <members>CommonPrefix_1</members>
-        <members>CommonPrefix_2</members>
-        <name>PermissionSet</name>
+        <members>AR_CMDT.AR_CMDT_Record1</members>
+        <members>AR_CMDT.AR_CMDT_Record2</members>
+        <members>AR_CMDT.AR_CMDT_Record3</members>
+        <members>AR_CMDT.AR_CMDT_Record4</members>
+        <members>CaseCMT.CMT_record</members>
+        <members>CaseCMT.CMT_record2</members>
+        <members>CaseCMT.CMT_record3</members>
+        <members>Case_Controller_Picklist_Value.EscalationQueue_AVS_29</members>
+        <members>Elisa_Metadata_Type.metadata_Type_Record</members>
+        <members>Elisa_Metadata_Type.metadata_Type_Record2</members>
+        <name>CustomMetadata</name>
     </types>
     <version>63.0</version>
 </Package>
