US-0043475: Vijay US: Demo lwc

--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountService</members>
-        <members>AccountServiceTest</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>helloWorld</members>
+        <members>demoComponent</members>
         <name>LightningComponentBundle</name>
     </types>
     <version>64.0</version>
