US-0101304: Vijay US: Nested report folders

--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Level1/Level2/Level3/Level3Report_1he</members>
+        <members>Level1</members>
+        <members>Level1/Level2</members>
+        <members>Level1/Level2/Level3</members>
         <name>Report</name>
     </types>
     <version>65.0</version>
