US-0101309: Vijay US: report Delete

--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>CCHCustom__c.Author__c</members>
-        <name>CustomField</name>
+        <members>CAPBillingTeam/EPC_Products_Report_828</members>
+        <members>Level1/Level2/Level3/MyReport_uyW</members>
+        <name>Report</name>
     </types>
-    <types>
-        <members>CCHCustom__c</members>
-        <name>CustomObject</name>
-    </types>
-    <version>65.0</version>
+    <version>66.0</version>
 </Package>
